tests/baselines/reference/symbolType11.errors.txt
symbolType11.ts(7,2): error TS2869: Truthiness test of this kind of expression appears unintentional


==== symbolType11.ts (1 errors) ====
    var s = Symbol.for("logical");
    s && s;
    s && [];
    0 && s;
    s || s;
    s || 1;
    ({}) || s;
     ~~
!!! error TS2869: Truthiness test of this kind of expression appears unintentional